--- a/category.html
+++ b/category.html
@@ -133,7 +133,18 @@
 			<div class="container">
 				<div class="main-block">
 					<div class="category">
-						<div class="filters">dcc</div>
+						<div class="filters">
+							<div class="manufacturer">
+								<span>Производитель</span>
+								<ul>
+									<li><input type="checkbox" id="manuf-check"><label for="manuf-check">AND (Япония)</label></li>
+									<li><input type="checkbox"><label for="manuf-check">B.Well (Великобритания)</label></li>
+									<li><input type="checkbox"><label for="manuf-check">Dinamika (Россия)</label></li>
+									<li><input type="checkbox"><label for="manuf-check">Dr. Frei (Швейцария)</label></li>
+									<li><input type="checkbox"><label for="manuf-check">Flaem Nova (Италия)</label></li>
+								</ul>
+							</div>
+						</div>
 						<div class="list-block">
 							<div class="list-block-top">
 								<h3>Ингаляторы (Небулайзеры)</h3>
@@ -593,6 +604,100 @@
 									</div>
 								</div>	
 							</div>
+							<div class="pagination">
+								<div class="pagination-cont">
+									<span>Страница</span>
+									<ul>
+										<li><a href="#" class="pag-link-act">1</a></li>
+										<li><a href="#">2</a></li>
+										<li><a href="#">3</a></li>
+										<li><a href="#">4</a></li>
+										<li><a href="#">5</a></li>
+										<li><a href="#">6</a></li>
+										<li><a href="#">7</a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+			        <div class="viewed-products">
+						<div class="viewed-top">
+							<h3>Просмотренные товары</h3>
+							<img src="img/look.png" alt="">
+							<span>Смотреть все</span>
+						</div>
+						<div class="viewed-products-centre">
+							<div class="product-centre-elem">
+								<div class="prod-img" style="background-image: url(img/product-el4.png);"></div>
+								<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
+								<div class="rating-box">
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+								</div>
+								<span class="product-price">691 <span class="product-currency">грн.</span></span>
+							</div>
+							<div class="product-centre-elem">
+								<div class="prod-img" style="background-image: url(img/product-el5.png);"></div>
+								<span>Ингалятор Gamma Effect New (Гамма Эффект)</span>
+								<div class="rating-box">
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+								</div>
+								<span class="product-price">925 <span class="product-currency">грн.</span></span>
+							</div>
+								<div class="product-centre-elem">
+								<div class="prod-img" style="background-image: url(img/product-el4.png);"></div>
+								<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
+								<div class="rating-box">
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+								</div>
+								<span class="product-price">691 <span class="product-currency">грн.</span></span>
+							</div>
+							<div class="product-centre-elem">
+								<div class="prod-img" style="background-image: url(img/product-el5.png);"></div>
+								<span>Ингалятор Gamma Effect New (Гамма Эффект)</span>
+								<div class="rating-box">
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+								</div>
+								<span class="product-price">925 <span class="product-currency">грн.</span></span>
+							</div>
+							<div class="product-centre-elem">
+								<div class="prod-img" style="background-image: url(img/product-el6.png);"></div>
+								<span>Ингалятор компрессорный Turbo Mini (Dr. Frei)</span>
+								<div class="rating-box">
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+								</div>
+								<span class="product-price">1,685 <span class="product-currency">грн.</span></span>
+							</div>
+						</div>
+					</div>
+					<div class="desc-nebulazer">
+						<div class="desc-nebulazer-text">
+							<h4>Ингалятор (небулайзер) - незаменимый помощник.</h4>
+							<p>Для качественного лечения таких заболеваний, как астма, бронхит, трахеит и других болезней гортани и горла, врачи назначают ингаляции небулайзером. С помощью современных ингаляторов лекарство в виде распыленного воздуха попадает глубоко в дыхательные пути и производит высокий оздоровительный эффект. Компрессорные и ультразвуковые небулайзеры для детей и взрослых, которые позволят вам проводить ингаляции в домашних условиях.</p>
+							<span>читать полностью</span>
+						</div>
+						<div class="review">
+							<span>Отзывы покупателей</span>
+							<a href="#">Оставить отзыв</a>
 						</div>
 					</div>
 				</div>
