--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
 						<div class="header-content-right">
 							<div class="search-box">
 								<form action="#">
-									<input type="text" placeholder="Поиск товаров">
+									<input type="text" placeholder="Поиск товаров" id="search">
 									<input type="submit">
+									<ul class="search-list" id="result">
+										<!-- <a href="#" class="result-but">смотреть все результаты</a> -->
+									</ul>
 								</form>
 							</div>
 							<div class="comparison">
@@ -141,7 +144,7 @@
 								<p>ВМембранные ингаляторы (или меш-ингаляторы) объединяют в себе достоинства ультразвуковых и компрессорных устройств. Они бесшумны, компактны и могут пии</p>
 							</div>
 						</div>
-						<!-- <div class="slider-elem" style="background-image: url(img/slide-el1.jpg);">
+						<div class="slider-elem" style="background-image: url(img/slide-el1.jpg);">
 							<div class="slider-elem-text">
 								<h2>Мембранные небулайзеры</h2>
 								<p>ВМембранные ингаляторы (или меш-ингаляторы) объединяют в себе достоинства ультразвуковых и компрессорных устройств. Они бесшумны, компактны и могут пии</p>
@@ -152,7 +155,7 @@
 								<h2>Мембранные небулайзеры</h2>
 								<p>ВМембранные ингаляторы (или меш-ингаляторы) объединяют в себе достоинства ультразвуковых и компрессорных устройств. Они бесшумны, компактны и могут пии</p>
 							</div>
-						</div> -->
+						</div>
 					</div>
 					<div class="categories">
 						<div class="categories-block">
@@ -485,7 +488,7 @@
 		</footer>
 	</div>
 	<script type="text/javascript" src='js/jQuery-3.3.1.js'></script>
-	<!-- <script type="text/javascript" src="js/slick.min.js"></script> -->
+	<script type="text/javascript" src="js/slick.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>		
 </body>
 </html>
