--- a/index.html
+++ b/index.html
@@ -225,6 +225,15 @@
 									<div class="rating-box-elem"><i class="fa fa-star"></i></div>
 								</div>
 								<span class="product-price">232 <span class="product-currency">грн.</span></span>
+								<ul class="product-manuf">
+									<li>Производитель:</li>
+									<li>Тиса-Киев(Украина)</li>
+									<li>Размер</li>
+								</ul>
+								<div class="prod-el-buy">
+									<a href="#">Купить</a>
+									<img src="img/buy-logo.png" alt="">
+								</div>
 							</div>
 							<div class="product-centre-elem">
 								<div class="prod-img" style="background-image: url(img/product-el3.png);"></div>
