--- a/category.html
+++ b/category.html
@@ -465,44 +465,59 @@
 										<a href="#">Подробнее про акцию</a>
 									</div>
 									<div class="popup-bottom">
-										<div class="product-centre-elem">
-											<div class="prod-img" style="background-image: url(img/product-el4.png);"></div>
-											<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
-											<div class="rating-box">
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-											</div>
-											<span class="product-price">691 <span class="product-currency">грн.</span></span>
-											<a class="popup-button-buy"></a>
-										</div>
-										<div class="product-centre-elem">
-											<div class="prod-img" style="background-image: url(img/product-el5.png);"></div>
-											<span>Ингалятор Gamma Effect Max (Гамма Эффект)</span>
-											<div class="rating-box">
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-											</div>
-											<span class="product-price">925 <span class="product-currency">грн.</span></span>
-											<a class="popup-button-buy"></a>
-										</div>
-										<div class="product-centre-elem">
-											<div class="prod-img" style="background-image: url(img/product-el6.png);"></div>
-											<span>Ингалятор компрессорный Turbo Mini (Dr. Frei)</span>
-											<div class="rating-box">
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
-											</div>
-											<span class="product-price">1,685 <span class="product-currency">грн.</span></span>
-											<a class="popup-button-buy"></a>
+										<div class="popup-slider popup-slider-nav">
+										    <div class="popup-slide">
+										    	<img src="img/product-el4.png" alt="">
+										    	<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
+										    	<div class="rating-box">
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												</div>
+												<span class="product-price">691 <span class="product-currency">грн.</span></span>
+												<a class="popup-button-buy"></a>
+										    </div>
+										    <div class="popup-slide">
+										    	<img src="img/product-el5.png" alt="">
+										    	<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
+										    	<div class="rating-box">
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												</div>
+												<span class="product-price">925 <span class="product-currency">грн.</span></span>
+												<a class="popup-button-buy"></a>
+										    </div>
+										    <div class="popup-slide">
+										    	<img src="img/product-el6.png" alt="">
+										    	<span>Ингалятор компрессорный Turbo Mini (Dr. Frei)</span>
+										    	<div class="rating-box">
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												</div>
+												<span class="product-price">1,685 <span class="product-currency">грн.</span></span>
+												<a class="popup-button-buy"></a>
+										    </div>
+										     <div class="popup-slide">
+										    	<img src="img/product-el5.png" alt="">
+										    	<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
+										    	<div class="rating-box">
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												</div>
+												<span class="product-price">925 <span class="product-currency">грн.</span></span>
+												<a class="popup-button-buy"></a>
+										    </div>
 										</div>
 									</div>
 								</div>
