--- a/category.html
+++ b/category.html
@@ -6,7 +6,6 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=PT+Mono&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/elusive-icons/2.0.0/css/elusive-icons.min.css"> -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
@@ -468,7 +467,7 @@
 										<div class="popup-slider popup-slider-nav">
 										    <div class="popup-slide">
 										    	<img src="img/product-el4.png" alt="">
-										    	<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
+										    	<span class="pro-title">Ингалятор Gamma Effect Max (Эффект Макс)</span>
 										    	<div class="rating-box">
 													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
@@ -481,7 +480,7 @@
 										    </div>
 										    <div class="popup-slide">
 										    	<img src="img/product-el5.png" alt="">
-										    	<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
+										    	<span class="pro-title">Ингалятор Gamma Effect Max (Эффект Макс)</span>
 										    	<div class="rating-box">
 													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
@@ -494,7 +493,7 @@
 										    </div>
 										    <div class="popup-slide">
 										    	<img src="img/product-el6.png" alt="">
-										    	<span>Ингалятор компрессорный Turbo Mini (Dr. Frei)</span>
+										    	<span class="pro-title">Ингалятор компрессорный Turbo Mini (Dr. Frei)</span>
 										    	<div class="rating-box">
 													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
@@ -507,7 +506,7 @@
 										    </div>
 										     <div class="popup-slide">
 										    	<img src="img/product-el5.png" alt="">
-										    	<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
+										    	<span class="pro-title">Ингалятор Gamma Effect Max (Эффект Макс)</span>
 										    	<div class="rating-box">
 													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 													<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
