--- a/category-tile.html
+++ b/category-tile.html
@@ -333,6 +333,7 @@
 										<li>Объем резервуара: 2-8 мл</li>
 										<li>Гарантия: 2 года</li>
 									</ul>
+									<label for="size-select">Размер</label>
 									<select name="size-select" id="size-select">
 										<option value="М_76-89_см">М 76-89 см</option>
 									</select>
