--- a/card-product.html
+++ b/card-product.html
@@ -153,21 +153,15 @@
 							</ul>
 						</div>
 						<div class="card-product-content">
-							<div class="card-images" style="background-image: url(img/LUMBITRON-ELITE-DUO-LTG-305-Orliman.jpg);">
-								<div class="card-img-cont">
-									<div class="active-card-img">
-										<img src="img/card-img-l1.jpg" alt="">
-									</div>
-									<div>
-										<img src="img/ltg305-2.jpg" alt="">
-									</div>
-									<div>
-										<img src="img/ltg305-3.jpg" alt="">
-									</div>
-									<div>
-										<img src="img/ltg305-4.jpg" alt="">
-									</div>
-								</div>
+							<div class="card-images">
+								<img src="img/card-img-b1.jpg" alt="" id="main-img" />
+								<div class="stock-circle7">-7%</div>
+								<ul>
+								  <li><img src="img/gallery/thumb/card-img-l1.jpg" alt="" /></li>
+								  <li><img src="img/gallery/thumb/ltg305-2.jpg" alt="" /></li>
+								  <li><img src="img/gallery/thumb/ltg305-3.jpg" alt="" /></li>
+								  <li><img src="img/gallery/thumb/ltg305-4.jpg" alt="" /></li>
+								</ul>
 							</div>
 							<div class="card-right">
 								<div class="card-right-l">
@@ -224,7 +218,6 @@
 									</div>
 								</div>
 							</div>
-							<!-- <div class="card-info"></div> -->
 							<div class="overlay-card js-overlay-campaign">
 								<div class="popup-card js-popup-campaign">
 									<div class="popup-top">
@@ -257,7 +250,7 @@
 											<div class="checkout-order">
 												<div class="checkout-order-block">
 													<span class="total">Итого: </span>
-													<span class="card-buy-qv">926 </span>
+													<span class="card-buy-qv">1852 </span>
 													<span>грн.</span>	
 													<div>
 														<a href="#">Оформить заказ</a>
@@ -322,6 +315,16 @@
 												<span class="product-price">925 <span class="product-currency">грн.</span></span>
 												<a class="popup-button-buy"></a>
 										    </div>
+										</div>
+									</div>
+									<div class="one-click">
+										<div class="one-click-block">
+											<h4>Или купить в 1 клик</h4>
+											<form action="#">
+												<input type="tel" placeholder="+38 ( . . . ) . . .  -  . .  -  . .">
+												<a href="#">Купить в 1 клик</a>	
+											</form>									
+											<p>Оставьте свой номер телефона для быстрого заказа. Наш менеджер свяжется с вами в ближайшее время.</p>
 										</div>
 									</div>
 								</div>
@@ -449,11 +452,12 @@
 							</div>
 						</div>
 					</div>
-					<div class="viewed-products">
+					<div class="under-card-desc-data"></div>
+					<div class="viewed-products viewed-products-card">
 						<div class="viewed-top">
 							<h3>С этим товаром покупают</h3>
 						</div>
-						<div class="viewed-products-centre">
+						<div class="card-viewed-products">
 							<div class="product-centre-elem">
 								<div class="prod-img" style="background-image: url(img/product-el4.png);"></div>
 								<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
@@ -513,14 +517,91 @@
 									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 								</div>
 								<span class="product-price">1,685 <span class="product-currency">грн.</span></span>
+							</div>
+							<div class="product-centre-elem">
+								<div class="prod-img" style="background-image: url(img/product-el4.png);"></div>
+								<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
+								<div class="rating-box">
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+								</div>
+								<span class="product-price">691 <span class="product-currency">грн.</span></span>
 							</div>
 						</div>
 					</div>
-					<div class="viewed-products">
+					<div class="top-prod-category">
+						<h3>ТОП товары %category%</h3>
+						<div class="top-prod-category-center">
+							<div class="top-prod-category-elem">
+								<div class="top-prod-category-elem-img" style="background-image: url(img/list-elem2.png);">
+								</div>
+								<div class="top-prod-category-elem-main">
+									<div class="top-prod-category-elem-top">
+										<div class="list-elem-buy">
+											<span>1,899 <span class="list-elem-currency">грн.</span></span>
+											<a href="#">Купить</a>
+										</div>
+										<div class="top-prod-category-elem-tr">
+											<h4>Небулайзер OMRON A3 Complete (NE-C300-UK)</h4>
+											<div class="rating-box">
+												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												<div class="rating-box-elem"><i class="fa fa-star"></i></div>
+												<span>Отзывы (4)</span>
+											</div>
+											<div class="top-prod-category-elem-trb">
+												<div class="product-code">Код товара: 12490</div>
+												<div class="in-stock"><div><i class="fa fa-check"></i></div>товар на складе</div>
+											</div>
+										</div>
+									</div>
+									<div class="top-prod-category-elem-description">
+										<p>Современный медицинский прибор для эффективного лечения многих заболеваний. Три режима распыления аэрозоля с простым переключением. Непрерывное время работы компрессора. Широкий спектр распыляемых лекарственных препаратов и малый остаточный объем. Полная комплектация.</p>
+									</div>
+								</div>	
+							</div>
+							<div class="top-prod-category-elem">
+								<div class="top-prod-category-elem-img" style="background-image: url(img/list-elem2.png);">
+								</div>
+								<div class="top-prod-category-elem-main">
+									<div class="top-prod-category-elem-top">
+										<div class="list-elem-buy">
+											<span>1,899 <span class="list-elem-currency">грн.</span></span>
+											<a href="#">Купить</a>
+										</div>
+										<div class="top-prod-category-elem-tr">
+											<h4>Небулайзер OMRON A3 Complete (NE-C300-UK)</h4>
+											<div class="rating-box">
+												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+												<div class="rating-box-elem"><i class="fa fa-star"></i></div>
+												<span>Отзывы (4)</span>
+											</div>
+											<div class="top-prod-category-elem-trb">
+												<div class="product-code">Код товара: 12490</div>
+												<div class="in-stock"><div><i class="fa fa-check"></i></div>товар на складе</div>
+											</div>
+										</div>
+									</div>
+									<div class="top-prod-category-elem-description">
+										<p>Современный медицинский прибор для эффективного лечения многих заболеваний. Три режима распыления аэрозоля с простым переключением. Непрерывное время работы компрессора. Широкий спектр распыляемых лекарственных препаратов и малый остаточный объем. Полная комплектация.</p>
+									</div>
+								</div>	
+							</div>
+						</div>
+					</div>
+					<div class="viewed-products viewed-products-card you-see">
 						<div class="viewed-top">
 							<h3>Вы смотрели</h3>
 						</div>
-						<div class="viewed-products-centre">
+						<div class="card-viewed-products">
 							<div class="product-centre-elem">
 								<div class="prod-img" style="background-image: url(img/product-el4.png);"></div>
 								<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
@@ -580,6 +661,18 @@
 									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 								</div>
 								<span class="product-price">1,685 <span class="product-currency">грн.</span></span>
+							</div>
+							<div class="product-centre-elem">
+								<div class="prod-img" style="background-image: url(img/product-el4.png);"></div>
+								<span>Ингалятор Gamma Effect Max (Эффект Макс)</span>
+								<div class="rating-box">
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+									<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
+								</div>
+								<span class="product-price">691 <span class="product-currency">грн.</span></span>
 							</div>
 						</div>
 					</div>
