--- a/card-product.html
+++ b/card-product.html
@@ -241,7 +241,11 @@
 												</div>
 												<div>
 													<span><span class="quantity-prod-price">926</span> грн.</span>
-													<div class="quantity-prod-count"></div>
+													<div class="quantity-prod-count">
+														<img src="img/up-count.png" alt="" class="up-count">
+														<input type="text" value="1">
+														<img src="img/down-count.png" alt="" class="down-count">
+													</div>
 												</div>
 											</div>
 										</div>
